# quick_trim

./: Cargo.toml  LICENSE  README.md
src/: main.rs
