[package]
name = "quick_trim"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.27.2", features = ["default", "__screenshot"] }

env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }

rfd = "0.14.1"

egui_extras = { version = "0.27.2", features = ["image"] }
image = { version = "0.25.1", features = ["png"] }
egui-toast = "0.13.0"
